package it.unibo.samplejavafx.mvc.model.Movement;

import it.unibo.samplejavafx.mvc.model.ChessBoard.ChessBoard;
import it.unibo.samplejavafx.mvc.model.Point2D.Point2D;

import java.util.List;

public interface MovementStrategy {
    List<Point2D> calculateMoves(Point2D start, Point2D direction, ChessBoard board);
}
