@startuml Movement

skinparam classAttributeIconSize 0
hide empty fields
hide empty methods

interface MovementStrategy {
    +calculateMoves(start : Point2D, direction : Point2D, board : ChessBoard) : List<Point2D>
}

class SlidingMovement {
    +calculateMoves(start : Point2D, direction : Point2D, board : ChessBoard) : List<Point2D>
}

class JumpingMovement {
    +calculateMoves(start : Point2D, direction : Point2D, board : ChessBoard) : List<Point2D>
}

class SteppingMovement {
    +calculateMoves(start : Point2D, direction : Point2D, board : ChessBoard) : List<Point2D>
}

interface MoveRules {
    +getValidMoves(start : Point2D, board : ChessBoard, playerColor : PlayerColor) : List<Point2D>
}

class MoveRulesImpl {
    +getValidMoves(start : Point2D, board : ChessBoard, playerColor : PlayerColor) : List<Point2D>
}

enum MoveType {
    MOVE_ONLY
    EAT_ONLY
    MOVE_AND_EAT
}

enum MoveStrategy {
    JUMPING
    SLIDING
    STEPPING
}

class Piece {
    +getValidMoves(start : Point2D, board : ChessBoard) : List<Point2D>
    +hasMoved() : boolean
    +setHasMoved() : void
}

MovementStrategy <|.. SlidingMovement
MovementStrategy <|.. JumpingMovement
MovementStrategy <|.. SteppingMovement

MoveRules <|.. MoveRulesImpl
MoveRulesImpl --> MoveType
MoveRulesImpl --> MoveStrategy
MoveStrategy --> MovementStrategy : strategy

Piece ..> MoveRules : uses rules from PieceDefinition

@enduml
